<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AfterPairMatchingBestResultFragment"
    android:background="@drawable/frame_xml">

    <Button
        android:id="@+id/button_close"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/close_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:paddingTop="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/zharaisyn"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/pair_matching_result"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/retry_white"
            android:text="@string/retry"
            android:textSize="18sp"
            android:textColor="#6665FF" />

    </LinearLayout>

</RelativeLayout>
