<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PairMatchingPreviewActivity">

    <Button
        android:id="@+id/button_close"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/close_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_close"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:contentDescription="qa_background"
            android:src="@drawable/test" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/qanda"
            android:textColor="#33455B"
            android:textSize="30sp" />

        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/qa_description"
            android:textColor="#5C6F80"
            android:textSize="18sp" />

        <com.wefika.horizontalpicker.HorizontalPicker
            android:id="@+id/picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="2"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            app:dividerSize="10dp"
            app:sideItems="1"
            app:values="@array/values"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_next_button"
            android:text="@string/start_button"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
