<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ThirdFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="15dp"
        android:text="@string/settings_kazakh"
        android:textColor="#33455B"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="15dp"
        android:text="Қосымша туралы"
        android:textAllCaps="true"
        android:textColor="#979797"
        android:textSize="14sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:divider="@drawable/list_divider"
        android:showDividers="middle">

        <TableRow
            android:id="@+id/link_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@drawable/background_tablerow">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_span="0"
                android:src="@drawable/rating" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/rating"
                android:textColor="#5C6F80"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/link_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:background="@drawable/background_tablerow">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_span="0"
                android:src="@drawable/contactus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="0"
                android:gravity="center_vertical"
                android:text="@string/contactus"
                android:textColor="#5C6F80"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="15dp"
        android:text="@string/share_with_friends"
        android:textAllCaps="true"
        android:textColor="#979797"
        android:textSize="14sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:divider="@drawable/list_divider"
        android:showDividers="middle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/link_instagram"
            android:clickable="true"
            android:background="@drawable/background_tablerow">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_span="0"
                android:src="@drawable/instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="Instagram"
                android:textColor="#5C6F80"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:id="@+id/link_facebook"
            android:clickable="true"
            android:background="@drawable/background_tablerow">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_span="0"
                android:src="@drawable/more_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_span="0"
                android:gravity="center_vertical"
                android:text="Басқа желілер"
                android:textColor="#5C6F80"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@mussanurtas"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#979797" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n17r.com"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#979797"
        android:layout_marginTop="5dp" />

</LinearLayout>
