<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="65dp"
    android:paddingLeft="26dp"
    android:paddingRight="26dp"
    android:paddingTop="15dp"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_title"
        android:textColor="#33455B"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:columnCount="2"
        android:rowCount="4">

        <LinearLayout
            android:id="@+id/pair_matching"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/match_thumbnail" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/pair_matching"
                android:textColor="#33455B"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/testing"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/qa_thumbnail" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/qanda"
                android:textColor="#33455B"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/oval" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/soon"
                android:textColor="#33455B"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/oval" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/soon"
                android:textColor="#33455B"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/oval" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/soon"
                android:textColor="#33455B"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:background="@drawable/background_item"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/oval" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/soon"
                android:textColor="#33455B"
                android:textSize="16sp" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>
